fixed styling on Create form. Added flexbox to align inputs more cleanly.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -255,7 +255,20 @@ body {
 .loginText {
   margin-top: 10px;
 }
-
+.createLabels {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.createInputs {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
 .formItem {
   display: flex;
   flex-wrap: wrap;
@@ -267,11 +280,15 @@ select,
 textarea {
   border-radius: 4px;
   border: 2px solid #555;
-  margin: 0 5px;
+  margin: 5px;
   width: 175px;
 }
 input,
 select {
+  height: 25px;
+}
+label {
+  margin: 9px 5px 1px;
   height: 25px;
 }
 form {
@@ -281,6 +298,13 @@ form {
   margin-top: 40px;
   max-width: 600px;
   width: 100%;
+}
+.formInputs {
+  display: flex;
+  flex-direction: row;
+}
+.formButtons {
+  display: flex;
 }
 h1 {
   font-size: 50px;
